# ppltk

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  aclocal.m4  configure  configure.ac  genConfigure
autoconf/: ppl7.m4  sdl2.m4  sdl3.m4
demo/: demo.h  main.cpp
include/: ppltk-layout.h  ppltk.h  ppltk_config.h  ppltk_config.h.in  ppltk_layout.h
resources/: liberationmono.fnt6  liberationsans.fnt6  res.h  resources.conf
src/: Button.cpp  Divider.cpp  Event.cpp  Frame.cpp  Label.cpp  Layout.cpp  LineInput.cpp  Resources.cpp  SizePolicy.cpp  SpinBox.cpp  Surface.cpp  TextEdit.cpp  Widget.cpp  WidgetStyle.cpp  Window.cpp  WindowManager.cpp  WindowManager_SDL2.cpp  WindowManager_SDL3.cpp  checkbox.cpp  combobox.cpp  doubleslider.cpp  listwidget.cpp  radiobutton.cpp  scrollbar.cpp  slider.cpp
src/layout/: BoxLayout.cpp  FormLayout.cpp  HBoxLayout.cpp  Layout.cpp  Margins.cpp  VBoxLayout.cpp
src/widgets/: Button.cpp  Divider.cpp  Frame.cpp  Label.cpp  LineInput.cpp  SpinBox.cpp  Surface.cpp  TabWidget.cpp  TextEdit.cpp  checkbox.cpp  combobox.cpp  doubleslider.cpp  listwidget.cpp  radiobutton.cpp  scrollbar.cpp  slider.cpp
